# QDRV

./: Cargo.toml  README.md
docs/: QDRV_SPEC.md  QDRV_TECHNICAL_REFERENCE.md  ROADMAP.md
examples/web/: README.md  index.html  qdrv-player.js  sample-dynamic.json  tone-map.wgsl  webcodecs-player.js
qdrv-codec/: Cargo.toml
qdrv-codec/src/: av1.rs  compress.rs  error.rs  lib.rs  metadata_obu.rs  temporal.rs
qdrv-core/: Cargo.toml
qdrv-core/src/: aces.rs  colors.rs  error.rs  fidelity.rs  lib.rs  pixel.rs  pq.rs
qdrv-decode/: Cargo.toml
qdrv-decode-wasm/: Cargo.toml  README.md
qdrv-decode-wasm/src/: lib.rs
qdrv-decode/src/: lib.rs  object_tone_map.rs  reconstruct.rs  sdr.rs  tone_map.rs
qdrv-encode/: Cargo.toml
qdrv-encode/src/: lib.rs  transcode.rs
qdrv-io/: Cargo.toml
qdrv-io/src/: container.rs  error.rs  lib.rs  reader.rs  writer.rs
qdrv-io/tests/: checked_in_vectors.rs  test_vectors.rs
qdrv-meta/: Cargo.toml
qdrv-meta/src/: binary.rs  compatibility.rs  dynamic_meta.rs  fidelity_contract.rs  hdr10plus.rs  interoperability.rs  lib.rs  manifest.rs  object_meta.rs  open_dynamic_v2.rs  static_meta.rs  tone_curve.rs
qdrv-meta/tests/: spherical_fixture.rs
qdrv-mux/: Cargo.toml
qdrv-mux/src/: avif.rs  demux.rs  elementary.rs  fragmented.rs  lib.rs
qdrv-tool/: Cargo.toml
qdrv-tool/src/: aces_export.rs  conformance.rs  fidelity_eval.rs  interop_export.rs  main.rs
test-vectors/: README_TEST_VECTORS.md  ramp-delivery.qdrv32  ramp-mastering.qdrv64  spherical-region.objectmeta.json
