[package]
name                 = "qdrv-decode"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
description          = "QDRV decoder: delivery-tier decoding and display-adaptive ST 2094-based tone mapping"
rust-version.workspace = true

[dependencies]
qdrv-core.workspace  = true
qdrv-meta.workspace  = true

[lints]
workspace = true
